# 29abd-dep-trabalho-final

./: README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
src/config/: settings.py  settings.yml
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
tests/: test_transformations.py
