# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataeng_pyspark_data_pipeline_29abd"
version = "0.1.0"
authors = [
  { name="paulofoliveira", email="paulo.fdo@hotmail.com" },
]
description = "Um pipeline de dados com PySpark estruturado com boas práticas de engenharia de software."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark==4.0.0",
    "pyyaml==6.0.3"
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.9",
    "black==25.1.0",
    "build==1.3.0"
]

[project.scripts]
run-data-pipeline = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
